--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ plugins {
 group = rootProject.properties.mod_package
 version = rootProject.properties.mod_version
 ModLoader loader = ModLoader.fromProject(project)
+archivesBaseName = "${rootProject.properties.mod_id}-$loader.friendlyName"
 
 project.ext["loom.platform"] = loader.friendlyName
 
@@ -55,6 +56,8 @@ if (loader == FORGE) {
     loom {
         forge {
             useCustomMixin = false
+
+            mixinConfig "${E.p.mod_id}.mixins.json"
         }
     }
 }
@@ -229,7 +232,9 @@ processResources {
 if (!coreVersion) {
     jar.dependsOn("preprocessResources")
     validateAccessWidener.dependsOn("preprocessResources")
+    classes.dependsOn("preprocessResources")
     build.dependsOn("validateAccessWidener")
+    compileJava.dependsOn("validateAccessWidener")
 }
 
 remapJar {
