--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,9 @@ mod_authors=YourNameHere,OtherNameHere
 mod_contributors=AContributorHere,AnotherContributorHere
 license=CC0-1.0
 
-homepage_url=https://example.com
-issue_tracker_url=https://example.com
+homepage_url=https://github.com/Jab125/multiloader-example-mod
+sources_url=https://github.com/Jab125/multiloader-example-mod
+issue_tracker_url=https://github.com/Jab125/multiloader-example-mod/issues
 
 # Supports Forge, Fabric, and NeoForge. There is no need to support Quilt since all Fabric mods support Quilt, just don't access the impl classes.
 # Do not remove Fabric, really bad things will happen if you do.
