--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,18 @@ repositories {
     maven {
         url = "https://maven.terraformersmc.com/releases"
     }
+    // For NeoForge
     maven {
         url = "https://maven.neoforged.net/releases"
+    }
+    // For NeoForge PRs
+    if (rootProject.properties.neoforge_pr) {
+        maven {
+            url "https://prmaven.neoforged.net/NeoForge/pr$rootProject.properties.neoforge_pr"
+            content {
+                includeModule("net.neoforged", "neoforge")
+            }
+        }
     }
     // For Forge
     maven {
