--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
 org.gradle.jvmargs=-Xmx5G
 # Gradle stuff
-kotlin_version=1.5.21
 architectury_loom_version=1.7-SNAPSHOT
-preprocessor_version=0.3.0
+stonecutter_version=0.4.2
 
 mod_version=1.0.0
 mod_package=com.example.examplemod
@@ -19,7 +18,7 @@ sources_url=https://github.com/Jab125/multiloader-example-mod
 issue_tracker_url=https://github.com/Jab125/multiloader-example-mod/issues
 
 # Supports Forge, Fabric, and NeoForge. There is no need to support Quilt since all Fabric mods support Quilt, just don't access the impl classes.
-# Do not remove Fabric, really bad things will happen if you do.
+# Unlike the preprocessor version, Fabric can be safely removed here. Make sure to switch your active project first!
 enabled_platforms=forge,fabric,neoforge
 
 minecraft=1.21
@@ -43,8 +42,3 @@ neoforge_pr=
 
 # Forge Stuff
 forge=1.21-51.0.29
-
-# Preprocessor stuff
-uses_tabs=false
-patterns_class=com.example.examplemod.Patterns
-pattern_annotation=com.example.examplemod.Pattern
