--- a/stonecutter.gradle
+++ b/stonecutter.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 plugins.apply "dev.kikugie.stonecutter"
-stonecutter.active "0.0.0-forge" /* [SC] DO NOT EDIT */
+stonecutter.active "0.0.0-fabric" /* [SC] DO NOT EDIT */
 
 stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chiseled) {
     group = "project"
