add way to specify patchment mappings

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ enabled_platforms=forge,fabric,neoforge
 
 minecraft=1.21
 minecraft_dependency=~1.21
+parchment_version=1.21:2024.07.28
 # If this is blank, the stock version is used. This also bundles mixinextras into the JAR file if it is not the same as the stock version.
 mixinextras=0.3.5
 
